Jiyoung: 컨트롤러, 프로퍼티 맞춤

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.27.0.178:3306/hantick?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Hansol123!
 
-# view Ïó∞Îèô
+# viewèô
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 server.servlet.jsp.init-parameters.development=true
