인선: 디렉토리 구조 맞추기 전 commit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,19 @@ spring.datasource.url=jdbc:mysql://172.27.0.178:3306/hantick?autoReconnect=true&
 spring.datasource.username=root
 spring.datasource.password=Hansol123!
 
-# view™
+# viewï¿½ï¿½
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 server.servlet.jsp.init-parameters.development=true
 
 # port number
 server.port = 8080
+
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dooly6618@gmail.com
+spring.mail.password=onkenceqkdypfmyl
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
