--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # DataSource
-spring.datasource.url=jdbc:mysql://172.27.0.178:3306/hantick?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://172.27.0.178:3306/hantick?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=Hansol123!
 
